--- a/WebSite/index.html
+++ b/WebSite/index.html
@@ -5,17 +5,14 @@
 <body>
 <div style="width:1024px;margin-left: auto; margin-right: auto">
 <h1>ZotPad</h1>
+<iframe width="560" height="315" src="http://www.youtube.com/embed/wpmm8HKmX_s" frameborder="0" allowfullscreen></iframe>
 <h2>Introduction and features</h2>
-<p>ZotPad is an iPad client for Zotero reference management system. The main purpose of the software is
-to enable reading PDF files that stored on the Zotero server. ZotPad stores the data and
-files that it downloads from the Zotero server in a local cache enabling online and offline use.
-In contrast to Zotero desktop software that maintains an offline copy of Zotero database that needs
-to be syncronized periodically, ZotPad uses a continuos synchronization model. What this means that
-as long as network connection is available, ZotPad will be connected to Zotero server and use the
-data that is available on the server directly without the need for synchronization. ZotPad uses
-a preemptive cache model that tries to predict what items the user will want to view and
-downloads data and attachment files for these items in the background before the user has viewed
-the items.</p>
+<p>ZotPad is an iPad client for Zotero reference management system. The main purpose of the software
+is to enable reading PDF files that are stored on the Zotero server. ZotPad stores the data and
+files that it downloads from the Zotero server in a local cache enabling online and offline use.</p>
+<p>The first version provides a read-only access to data and attachments stored on the Zotero server
+and allows the user to browse items by libraries and collections. Downloading and viewing the 
+following file types is supported: PDF, MS Office , iWork , RTF, plain text, csv, images</p>
 
 <h3>Main features</h3>
 <ul>
@@ -35,7 +32,7 @@ the items.</p>
 <li>Full text search</li>
 <li>Notes</li>
 <li>Tags</li>
-<li>Linked web pages<li>
+<li>Linked web pages</li>
 <li>Snapshots of web pages</li>
 </ul>
 
@@ -154,7 +151,7 @@ support forum will be provided later.</p>
 <li>OAuthConsumer, Copyright (C) 2010-2012 Jonathan R. Crosby. All rights reserved. (<a href="http://www.opensource.org/licenses/mit-license.php">License</a>)</li>
 <li>DSActivityView, Copyright (C) 2009-2011 Dejal Systems, LLC. All rights reserved. (<a href="https://dejal.svn.beanstalkapp.com/open/DSActivityView/Sources/DSActivityView.h">License</a>)</li>
 <li>fmdb, Copyright (C) 2008 Flying Meat Inc. All rights reserved. (<a href="https://raw.github.com/ccgus/fmdb/7ffd84d76b3b3b6858fbad063451a76b3dfc145a/LICENSE.txt">License</a>)</li>
-<li>three20, Copyright (C) 2009-2011 FacebookAll rights reserved. (<a href="http://www.apache.org/licenses/LICENSE-2.0">License</a>)</li>
+<li>three20, Copyright (C) 2009-2011 Facebook. All rights reserved. (<a href="http://www.apache.org/licenses/LICENSE-2.0">License</a>)</li>
 </ul>
 </div>
 </body>
