Refactoring prior to 1.1 development - BROKEN BUILD

--- a/WebSite/index.html
+++ b/WebSite/index.html
@@ -5,6 +5,7 @@
 <body>
 <div style="width:1024px;margin-left: auto; margin-right: auto">
 <h1>ZotPad</h1>
+<p><b>NEWS:</b> ZotPad is available for download at the <a href="http://itunes.apple.com/us/app/zotpad/id497260579?ls=1&mt=8">App Store</a></p>
 <iframe width="560" height="315" src="http://www.youtube.com/embed/wpmm8HKmX_s" frameborder="0" allowfullscreen></iframe>
 <h2>Introduction and features</h2>
 <p>ZotPad is an iPad client for Zotero reference management system. The main purpose of the software
@@ -12,7 +13,7 @@ is to enable reading PDF files that are stored on the Zotero server. ZotPad stor
 files that it downloads from the Zotero server in a local cache enabling online and offline use.</p>
 <p>The first version provides a read-only access to data and attachments stored on the Zotero server
 and allows the user to browse items by libraries and collections. Downloading and viewing the 
-following file types is supported: PDF, MS Office , iWork , RTF, plain text, csv, images</p>
+following file types is supported: PDF, MS Office, iWork, RTF, plain text, csv, all common image formats</p>
 
 <h3>Main features</h3>
 <ul>
@@ -21,7 +22,7 @@ following file types is supported: PDF, MS Office , iWork , RTF, plain text, csv
 <li>Previews of attached PDF files</li>
 <li>Reader mode compatible with the following files: PDF, MS Office , iWork , RTF, plain text, csv, images</li>
 <li>Printing or sending files to other applications</li>
-<li>Adjusting home much resources are used for cache</li>
+<li>Adjusting how much resources are used for cache</li>
 </ul>
 
 <h3>Features not included in the first version</h3>
